--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <body>
     <!-- TOP SECTION START-->
     <section class="top-section" id="header" aria-label="top-section">
+        <img class="logo" src="images/logo-small.png" alt="לוגו" title="לוגו" width="110" height="42" load="lazy">
     </section>
     <!-- TOP SECTION END-->
 
