fix meta keyword

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html dir="rtl" lang="he-IL">
 
 <head>
-    <meta name="description" content="קבלת פרטים על מכבי>
-    <meta name=" keywords" content="מכבי, הצטרפות למכבי">
+    <meta name="description" content="קבלת פרטים על מכבי">
+    <meta name="keywords" content="מכבי, הצטרפות למכבי">
     <meta name="author" content="Amit Ashdot">
     <link rel="icon" href="./images/e.ico" sizes="32x32">
     <meta charset="utf-8">
