small css changes

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <form class="cta-form show-on-scroll" id="form" method="post">
                 <div class=" cta-form-inputs">
 
-                    <input type="text" class="cta-input" placeholder="שם פרטי" name="name" id="name">
-                    <input type="text" class="cta-input" placeholder="שם משפחה" name="name" id="name">
-                    <input type="tel" class="cta-input" placeholder="תעודת זהות" name="name" id="name">
+                    <input type="text" class="cta-input" placeholder="שם פרטי" name="Fname" id="Fname">
+                    <input type="text" class="cta-input" placeholder="שם משפחה" name="Sname" id="Sname">
+                    <input type="tel" class="cta-input" placeholder="תעודת זהות" name="id" id="id">
                     <input type="tel" class="cta-input" placeholder="טלפון" name="phone" id="phone">
                     <!-- <input type="text" class="cta-input" placeholder="אימייל" name="email" id="email"> -->
                     <select class="cta-input select" name="time" id="time">
