--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="קבלת פרטים על מכבי">
     <meta name="keywords" content="מכבי, הצטרפות למכבי">
     <meta name="author" content="Amit Ashdot">
-    <link rel="icon" href="./images/e.ico" sizes="32x32">
+    <link rel="icon" href="./images/favicon.ico" sizes="32x32">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
@@ -21,9 +21,9 @@
 
     <!-- Accept-Encoding: gzip, deflate -->
     <!-- PWA     -->
-    <meta name="theme-color" content="#08F29B" />
+    <meta name="theme-color" content="#08428F" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="apple-touch-icon" href="./images/e.ico">
+    <link rel="apple-touch-icon" href="./images/favicon.ico">
 
 
     <title>מכבי</title>
