--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
                     כן!<br>
                     אני רוצה לקבל<br>
                     יותר פרטים על
-
                 </p>
                 <p id="maccabi">מכבי</p>
             </div>
         </div>
-        <!-- <iframe width="700" height="400"
-            src="https://data.gov.il/dataset/citiesandsettelments/resource/5c78e9fa-c2e2-4771-93ff-7f400a12f7ba/view/142a018b-c8f8-4f79-b922-891245e23835"
-            frameBorder="0"></iframe> -->
+
+        <p id="message" class="cta-message error"></p>
         <div class="box box-bottom">
             <form class="cta-form show-on-scroll" id="form" method="post">
                 <div class=" cta-form-inputs">
@@ -79,7 +77,7 @@
     <footer class="footer-section" aria-label="footer-section">
     </footer>
     <!-- FOOTER SECTION END-->
-    <script defer type="text/javascript" src="./js/scripts.min.js"></script>
+    <script defer type="text/javascript" src="./js/scripts.js"></script>
     <script defer type="text/javascript" src="./js/zepto.min.js"></script>
     <script defer type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -87,24 +85,10 @@
         function moveTo(event) { window.scrollTo(0, document.body.scrollHeight); }
     </script> -->
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            $('#form').submit(function (e) {
-                e.preventDefault();
-                var data = $(this).serialize();
-                if (validateForm()) {
-                    $.ajax({
-                        type: "POST",
-                        url: './mail.php',
-                        data: data,
-                        success: function (mail) {
-                            alert('הפרטים נשלחו בהצלחה');
-                            // window.location.href = 'thankyou.html';
-                        }
-                    });
-                }
-
-            });
-        });
+        // document.addEventListener("DOMContentLoaded", function () {
+        //     $('#form').submit(function (e) {
+        //     });
+        // });
     </script>
 
     <script>
