--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <p id="message" class="cta-message error"></p>
         <div class="box box-bottom">
-            <form class="cta-form show-on-scroll" id="form" method="post">
+            <form class="cta-form " id="form" method="post">
                 <div class="cta-form-inputs">
                     <div class="cta-form-inputs__name">
                         <input type="text" class="cta-input" placeholder="שם פרטי" name="Fname" id="Fname">
