--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             <form class="cta-form " id="form" method="post">
                 <div class="cta-form-inputs">
                     <div class="cta-form-inputs__name">
-                        <input type="text" class="cta-input" placeholder="שם פרטי" name="Fname" id="Fname">
-                        <input type="text" class="cta-input" placeholder="שם משפחה" name="Sname" id="Sname">
+                        <input type="text" class="cta-input" placeholder="שם פרטי:" name="Fname" id="Fname">
+                        <input type="text" class="cta-input" placeholder="שם משפחה:" name="Sname" id="Sname">
                     </div>
-                    <input type="tel" class="cta-input" placeholder="טלפון" name="phone" id="phone">
-                    <input type="tel" class="cta-input" placeholder="תעודת זהות" name="id" id="id">
+                    <input type="tel" class="cta-input" placeholder="טלפון:" name="phone" id="phone">
+                    <input type="tel" class="cta-input" placeholder="תעודת זהות:" name="id" id="id">
                     <!-- <input type="text" class="cta-input" placeholder="אימייל" name="email" id="email"> -->
-                    <input type="text" class="cta-input" placeholder="יישוב" name="city" id="city">
+                    <input type="text" class="cta-input" placeholder="יישוב:" name="city" id="city">
                     <select class="cta-input select" name="time" id="time">
-                        <option value="">שעת חזרה רצויה</option>
+                        <option value="">שעת חזרה רצויה:</option>
                     </select>
                     <button type="submit" class="cta-submit btn">חזרו אליי</button>
                 </div>
